stylesheets/common_.css
body {
    margin: 0;
    padding: 0;
    font-size: 10pt;
    font-family: sans-serif, Arial, Helvetica;
    color: #444444;
}

h1 {
	font-size: 16pt;
	color: #354b35;
}

h2 {
	font-size: 10pt;
	font-weight: bold;
	font-style: italic;
	color: #354b35;
}

img {
  border-width   : 0px;
}

/* Custom */

#pagewrapper {
    width: 100%;
    margin: 0px auto;
    padding: 0;
    border: none;
}
#content {
    padding: 12px 20px;
    clear: both;
}

#content .main {
	float:left;
}

#content .sidebar {
	float:right;
	width:250px;
}

#content .column1 {
	float: left;
	width: 48%;
}

#content .column2 {
	float: right;
	width: 48%;
}

#header {
    background-color: white;
    background-image: url('/issolar/images/headerbg.png');
    height: 88px;
    margin: 0;
    padding: 12px 20px;
    font-size: 9pt;
    text-align: right;
}

#header .logo {
	float:left;
	height: 88px;
}

#header input {
	width: 100px;
}

#footer {
    clear:both;
    text-align: center;
    color: #999999;
    font-size: 8pt;
    padding: 12px 20px;
}

#footer a:link 		{ color: #999999; }
#footer a:visited	{ color: #999999; }
#footer a:hover 	{ color: #608060; }
#footer a:active 	{ color: #999999; }


.Listing table {
	border-spacing : 0;
}

.Listing td {
	padding: 4px 15px;
}

.Listing tr:nth-child(even) {
	background: #efefef;
}

.Back a:link 	{ color: #999999; }
.Back a:visited	{ color: #999999; }
.Back a:hover 	{ color: #608060; }
.Back a:active 	{ color: #999999; }

.Back {
	color: #999999;
}

form { 
  display : inline;
}

hr {
	color: #999999;
	background-color: #999999;
	height: 1px;
}

table {
	border-spacing : 0;
}

td {
	padding: 2px 10px;
}

textarea { 
  height : 10em;
  width : 25em;
}

select {
  width : 20em;
}

input[type="text"]{
  width : 20em;
}

input[type="file"]{
  width : 20em;
}

a:link 		{ color: #333344; }
a:visited	{ color: #333344; }
a:hover 	{ color: #354b35; }
a:active 	{ color: #333344; }

label {
	display:block;
	margin-bottom:0.1em;
	margin-top:1em;
	font-size: 9pt;
	font-style: italic; 
	font-weight: bold;
}

